--- a/Client/CMakeLists.txt
+++ b/Client/CMakeLists.txt
@@ -3,4 +3,7 @@ project(nnfs_client C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(nnfs_client main.c)
+add_executable(nnfs_client src/main.c)
+
+target_include_directories(nnfs_client PUBLIC ../nnfs_proto/include)
+target_link_libraries(nnfs_client nnfs_proto)
