Added subprojects to a top-level CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,6 @@ project(NNFS C)
 
 set(CMAKE_C_STANDARD 99)
 
+add_subdirectory(./nnfs_proto ./nnfs_proto/build)
 add_subdirectory(./Client ./Client/build)
 add_subdirectory(./Server ./Server/build)
