--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(NNFS C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_subdirectory(./nnfs_proto ./nnfs_proto/build)
-add_subdirectory(./Client ./Client/build)
-add_subdirectory(./Server ./Server/build)
+add_subdirectory(./nnfs_proto ./nnfs_proto)
+add_subdirectory(./Client ./Client)
+add_subdirectory(./Server ./Server)
+add_subdirectory(./test ./test)
